few big updates

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
         <header class="projects_header">
             <img class="nav_decore" src="./images/nav_decore.png" alt="header decoration">
             <nav class="nav projects_nav">
-                <p class="nav_logo"><a href="/">Andrewdev</a></p>
+                <p class="nav_logo"><a href="/">Andrei</a></p>
                 <img class="nav_hamb" src="./images/menu.svg" alt="open menu">
                 <ul class="nav_menu">
                     <li class="nav_close">x</li>
