--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <header>
                 <img class="nav_decore" src="./images/nav_decore.png" alt="header decoration">
                 <nav class="nav">
-                    <p class="nav_logo"><a href="/">Andrewdev</a></p>
+                    <p class="nav_logo"><a href="/">Andrei</a></p>
                     <img class="nav_hamb" src="./images/menu.svg" alt="open menu">
                     <ul class="nav_menu">
                         <li class="nav_close">x</li>
@@ -29,86 +29,40 @@
                 <div class="home_intro">
                     <div class="home_projects-left">
                         <img class="vector" src="./images/projects-left.png" alt="projects vector">
-                        <a href="/1" class="home_project-left-one home_project"><img src="./images/project-left-one.jpg" alt="my project"></a>
-                        <a href="/2" class="home_project-left-two home_project"><img src="./images/project-left-two.jpg" alt="my project"></a>
-                        <a href="/3" class="home_project-left-three home_project"><img src="./images/project-left-three.jpg" alt="my project"></a>
+                        <a href="/1" class="home_project-left-one home_project">Next.js, Tailwind, Context app<img src="./images/project-left-one.jpg" alt="my project"></a>
+                        <a href="/2" class="home_project-left-two home_project">Fullstack - MERN App, Cloudinary API<img src="./images/project-left-two.jpg" alt="my project"></a>
+                        <a href="/3" class="home_project-left-three home_project">HTML, CSS, VanillaJs - Landing<img src="./images/project-left-three.jpg" alt="my project"></a>
                     </div>
                     <div class="home_text">
-                        <h1 class="home_title">I Fix Your <em>Web</em>sites</h1>
-                        <!-- <h1 class="home_title">I Create New <p><span>Web</span>sites</p></h1> -->
-                        <p class="home_descr"><a href="/contact.html">Leave email</a> and I will contact you. But before, look at my works, which you can see <span class="home_proj-link">riight <a href="#portfolio">here!</a></span>. I provide fast and high quality results by skills and hard work. I fix your problems with layouts ;) </p>
+                        <h1 class="home_title">Hi, I am Andrei <br> <em>How are you?</em></h1>
+                        <p class="home_descr">* Click this button to contact with me!</p>
                         <div class="home_buttons">
-                            <a class="btn_green" href="/contact.html">Get in touch</a>
+                            <a class="btn_green" href="/contact.html">Work with me</a>
                         </div>
                     </div>
                     <div class="home_projects-right">
                         <img class="vector" src="./images/projects-right.png" alt="projects vector">
-                        <a href="/4" class="home_project-right-one home_project"><img src="./images/project-right-one.jpg" alt="my project"></a>
-                        <a href="/5" class="home_project-right-two home_project"><img src="./images/project-right-two.jpg" alt="my project"></a>
-                        <a href="/6" class="home_project-right-three home_project"><img src="./images/project-right-three.jpg" alt="my project"></a>
+                        <a href="/4" class="home_project-right-one home_project">4<img src="./images/project-right-one.jpg" alt="my project"></a>
+                        <a href="/5" class="home_project-right-two home_project">5<img src="./images/project-right-two.jpg" alt="my project"></a>
+                        <a href="/6" class="home_project-right-three home_project">6<img src="./images/project-right-three.jpg" alt="my project"></a>
                     </div>
                 </div>
 
                 <div class="home_arrow down-scroll"><img class="down-scroll" src="./images/arrow-down.svg" alt="slide page down"></div>
             </header>
 
-            <section class="specialization" id="specialization">
-                <p class="description">What do I do?</p>
-                <h2 class="title">My Specialization</h2>
-                <div class="specialization_blocks">
-                    <div class="specialization_block">
-                        <div class="specialization_title">
-                            <img src="./images/fixing.svg" alt="fixing layouts service">
-                            <p>Fixing problems with layout html, css, javascript</p>
-                        </div>
-                        <p class="specialization_text">Helping with css, html</p>
-                        <a class="specialization_link" href="/projects#project-fixing">See example</a>
-                    </div>
-                    <div class="specialization_block">
-                        <div class="specialization_title">
-                            <img src="./images/landing-page.svg" alt="website from scratch service">
-                            <p>Website development. Javascript</p>
-                        </div>
-                        <p class="specialization_text">Frontend tasks - making webpages, <span style="text-decoration: underline;">without</span> heavy plugins from scratch with Javascript only</p>
-                        <a class="specialization_link" href="/projects#project-eCommerce">See example</a>
-                    </div>
-                    <div class="specialization_block">
-                        <div class="specialization_title">
-                            <img src="./images/figma-to-html.svg" alt="from figma to html website service">
-                            <p>Converting Figma to Website</p>
-                        </div>
-                        <p class="specialization_text">Convertation from Figma to Website html, css (javascript, bootstrap, sass)</p>
-                        <a class="specialization_link" href="/projects#project-figmaToHtml">See example</a>
-                    </div>
-                    <div class="specialization_block">
-                        <div class="specialization_title">
-                            <img src="./images/mobile-v.svg" alt="mobile responsive web development service">
-                            <p>Responsive-mobile page development</p>
-                        </div>
-                        <p class="specialization_text">Working on mobile version with html, css, javascript</p>
-                        <a class="specialization_link" href="/projects#project-figmaToHtml">See example</a>
-                    </div>
-                </div>
-                <div class="button">
-                    <a class="btn_green" href="/projects">See my projects</a>
-                </div>
-            </section>
-
             <section class="portfolio" id="portfolio">
-                <p class="description">My Work</p>
-                <h2 class="title">My Portfolio</h2>
+                <!-- <p class="description">My Work</p> -->
+                <h2 class="title">My Projects</h2>
                 <div class="portfolio_blocks">
-                    <div class="portfolio_block">
-                        <div class="portfolio_popup">
-                            <div class="portfolio_popup-text">
-                                <span class="portfolio_popup-close popup-close">x</span>
-                                HTML, CSS Landing Page, <br> Made withing 2 days. <br><br> <a class="portfolio_popup-link" href="https://allbirds-landing.vercel.app/" target="_blank" rel="noopener noreferrer nofollow">link to this site</a>
-                            </div>
-                        </div>
-                        <img src="./images/r-portfolio1.png" alt="">
+                    <div class="portfolio_block" id="project-figmaToHtml">
+                        <p class="portfolio_name">- HTML, CSS, Vanilla JS -</p><br>
+                        <img src="./images/r-portfolio1.png" alt="Growbe landing project image">
                         <div class="portfolio_details">
-                            <p class="portfolio_name">Allbirds Landing Page</p>
-                            <button class="portfolio_link portfolio_btn portfolio-btn">View Details</button>
+                            <p class="portfolio_name">
+                                * <b>Allbirds</b> - I can make professional sites for businesses. <br>
+                            </p>
+                            <a href="https://allbirds-landing.vercel.app/" class="portfolio_link portfolio_btn portfolio-btn portfolio_popup-link" target="_blank" rel="noopener noreferrer nofollow">Open website</a>
                         </div>
                     </div>
                     <div class="portfolio_block">
@@ -144,8 +98,50 @@
                 </div>
             </section>
 
+            <section class="specialization" id="specialization">
+                <p class="description">What do I do?</p>
+                <h2 class="title">My Specialization</h2>
+                <div class="specialization_blocks">
+                    <div class="specialization_block">
+                        <div class="specialization_title">
+                            <img src="./images/fixing.svg" alt="fixing layouts service">
+                            <p>Making advanced real-world features with Javascript - whether it is frontend or backend</p>
+                        </div>
+                        <p class="specialization_text">I am a Frontend Engineer, but I also work on backend with Node.js. <br><br> But, most importantly, I love difficult tasks.</p>
+                        <a class="specialization_link" href="/projects#project-fixing">See example of work</a>
+                    </div>
+                    <div class="specialization_block">
+                        <div class="specialization_title">
+                            <img src="./images/landing-page.svg" alt="website from scratch service">
+                            <p>Keeping up to date</p>
+                        </div>
+                        <p class="specialization_text">I use all the latest technologies including React, Next.js, Tailwind and more! <br><br> And I also learn new things everyday.</p>
+                        <a class="specialization_link" href="/projects#project-eCommerce">See example of work</a>
+                    </div>
+                    <div class="specialization_block">
+                        <div class="specialization_title">
+                            <img src="./images/figma-to-html.svg" alt="from figma to html website service">
+                            <p>Making beautiful-useful pages</p>
+                        </div>
+                        <p class="specialization_text">I have a good eye on ux & ui. <br><br> I am working with HTML and CSS for more then 1.5 year.</p>
+                        <a class="specialization_link" href="/projects#project-figmaToHtml">See example of work</a>
+                    </div>
+                    <div class="specialization_block">
+                        <div class="specialization_title">
+                            <img src="./images/mobile-v.svg" alt="mobile responsive web development service">
+                            <p>Responsive-mobile page development</p>
+                        </div>
+                        <p class="specialization_text">You will never get problems with my websites on different screens</p>
+                        <a class="specialization_link" href="/projects#project-figmaToHtml">See example of work</a>
+                    </div>
+                </div>
+                <div class="button">
+                    <a class="btn_green" href="/projects">See my projects</a>
+                </div>
+            </section>
+
             <section class="contact">
-                <h2 class="title">Need to fix or create website?</h2>
+                <h2 class="title">Want to work with me?</h2>
                 <div class="button">
                     <a class="btn_green" href="/contact">Contact me</a>
                 </div>
@@ -178,7 +174,7 @@
                         </ul>
                     </div>
                     <div class="footer_block">
-                        <p class="footer_title">Get in touch with me <a style="text-decoration: underline;" href="https://www.linkedin.com/in/andrey-sokolovsky-275a98165/" target="_blank" rel="noopener noreferrer nofollow">here</a></p>
+                        <p class="footer_title"><a style="text-decoration: underline;" href="https://www.linkedin.com/in/andrey-sokolovsky-275a98165/" target="_blank" rel="noopener noreferrer nofollow">Get in touch with me</a></p>
                         <!-- <form action="/contact" method="post">
                             <input id="email" type="text" name="email" placeholder="Enter your email">
                             <label for="email"><button type="submit">></button></label>
