--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
         <header class="projects_header">
             <img class="nav_decore" src="./images/nav_decore.png" alt="header decoration">
             <nav class="nav projects_nav">
-                <p class="nav_logo">Andrewdev</p>
+                <p class="nav_logo">Andrei</p>
                 <img class="nav_hamb" src="./images/menu.svg" alt="open menu">
                 <ul class="nav_menu">
                     <div class="nav_close">x</div>
