--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@
             <header class="projects_header">
                 <img class="nav_decore" src="./images/nav_decore.png" alt="header decoration">
                 <nav class="nav projects_nav">
-                    <p class="nav_logo"><a href="/">Andrewdev</a></p>
+                    <p class="nav_logo"><a href="/">Andrei</a></p>
                     <img class="nav_hamb" src="./images/menu.svg" alt="open menu">
                     <ul class="nav_menu">
                         <li class="nav_close">x</li>
@@ -32,43 +32,27 @@
                 <h2 class="title">My Portfolio</h2>
                 <div class="portfolio_blocks">
                     <div class="portfolio_block" id="project-figmaToHtml">
-                        <div class="portfolio_popup">
-                            <div class="portfolio_popup-text">
-                                <span class="portfolio_popup-close popup-close">x</span>
-                                HTML, CSS Landing Page from Figma, <br> Made withing 2 days. <br><br> <a href="https://allbirds-landing.vercel.app/" class="portfolio_popup-link" target="_blank" rel="noopener noreferrer nofollow">link to this site</a>
-                            </div>
-                        </div>
+                        <p class="portfolio_name">HTML, CSS, Vanilla JS</p>
                         <img src="./images/r-portfolio1.png" alt="Growbe landing project image">
                         <div class="portfolio_details">
-                            <p class="portfolio_name">Allbirds Landing Page from Figma to html, css</p>
-                            <button class="portfolio_link portfolio_btn portfolio-btn">View Details</button>
+                            <p class="portfolio_name">
+                                * <b>Allbirds</b> - I can make professional sites for businesses. <br>
+                            </p>
+                            <a href="https://allbirds-landing.vercel.app/" class="portfolio_link portfolio_btn portfolio-btn portfolio_popup-link" target="_blank" rel="noopener noreferrer nofollow">Open website</a>
                         </div>
                     </div>
                     <div class="portfolio_block" id="project-fixing">
-                        <div class="portfolio_popup">
-                            <div class="portfolio_popup-text">
-                                <span class="portfolio_popup-close popup-close">x</span>
-                                I was fixing HTML, CSS on that Landing Page, <br> Completed within 2 days <br><br> <a href="https://philanthropy-after.vercel.app/" class="portfolio_popup-link" target="_blank" rel="noopener noreferrer">link to fixed site</a>
-                                <a href="https://philanthropy-before.vercel.app/" target="_blank" rel="noopener noreferrer nofollow">or link to version before</a>
-                            </div>
-                        </div>
                         <img src="./images/r-portfolio2.png" alt="Philanthropy landing project image">
                         <div class="portfolio_details">
                             <p class="portfolio_name">Fixing Philanthropy Landing page</p>
-                            <button class="portfolio_link portfolio_btn portfolio-btn">View Details</button>
+                            <a href="https://allbirds-landing.vercel.app/" class="portfolio_link portfolio_btn portfolio-btn portfolio_popup-link" target="_blank" rel="noopener noreferrer nofollow">Open website</a>
                         </div>
                     </div>
                     <div class="portfolio_block" id="project-eCommerce">
-                        <div class="portfolio_popup">
-                            <div class="portfolio_popup-text">
-                                <span class="portfolio_popup-close popup-close">x</span>
-                                HTML, CSS, Javascript E-commerce store. <br> Slider, Displaying products from db, <br> Searching products etc... <br><br> <a href="https://california-store.vercel.app/" target="_blank" rel="noopener noreferrer nofollow">link to this site</a>
-                            </div>
-                        </div>
                         <img src="./images/r-portfolio3.png" alt="California store project image">
                         <div class="portfolio_details">
                             <p class="portfolio_name">California Small-to-Medium size Shop (under construction)</p>
-                            <button class="portfolio_link portfolio_btn portfolio-btn">View Details</button>
+                            <a href="https://allbirds-landing.vercel.app/" class="portfolio_link portfolio_btn portfolio-btn portfolio_popup-link" target="_blank" rel="noopener noreferrer nofollow">Open website</a>
                         </div>
                     </div>
                 </div>
