--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     </div>
                     <div class="home_text">
                         <h1 class="home_title">Hi, I am Andrei <br> <em>How are you?</em></h1>
-                        <p class="home_descr">* Click this button to contact with me!</p>
+                        <!-- <p class="home_descr">* Click this button to contact with me!</p> -->
                         <div class="home_buttons">
                             <a class="btn_green" href="/contact.html">Work with me</a>
                         </div>
@@ -56,7 +56,7 @@
                 <h2 class="title">My Projects</h2>
                 <div class="portfolio_blocks">
                     <div class="portfolio_block" id="project-figmaToHtml">
-                        <p class="portfolio_name">- HTML, CSS, Vanilla JS -</p><br>
+                        <p class="portfolio_name portfolio_tech">HTML, CSS, Vanilla JS</p><br>
                         <img src="./images/r-portfolio1.png" alt="Growbe landing project image">
                         <div class="portfolio_details">
                             <p class="portfolio_name">
@@ -66,6 +66,7 @@
                         </div>
                     </div>
                     <div class="portfolio_block">
+                        <p class="portfolio_name portfolio_tech">HTML, CSS, Vanilla JS</p><br>
                         <div class="portfolio_popup">
                             <div class="portfolio_popup-text">
                                 <span class="portfolio_popup-close popup-close">x</span>
@@ -80,6 +81,7 @@
                         </div>
                     </div>
                     <div class="portfolio_block">
+                        <p class="portfolio_name portfolio_tech">HTML, CSS, Vanilla JS</p><br>
                         <div class="portfolio_popup">
                             <div class="portfolio_popup-text">
                                 <span class="portfolio_popup-close popup-close">x</span>
@@ -105,9 +107,9 @@
                     <div class="specialization_block">
                         <div class="specialization_title">
                             <img src="./images/fixing.svg" alt="fixing layouts service">
-                            <p>Making advanced real-world features with Javascript - whether it is frontend or backend</p>
+                            <p>Making advanced real-world Frontend and backend Javascript features</p>
                         </div>
-                        <p class="specialization_text">I am a Frontend Engineer, but I also work on backend with Node.js. <br><br> But, most importantly, I love difficult tasks.</p>
+                        <p class="specialization_text">I am a Frontend Engineer, but I also work on Backend with Node.js. <br><br> But, most importantly, I love difficult tasks.</p>
                         <a class="specialization_link" href="/projects#project-fixing">See example of work</a>
                     </div>
                     <div class="specialization_block">
@@ -115,7 +117,7 @@
                             <img src="./images/landing-page.svg" alt="website from scratch service">
                             <p>Keeping up to date</p>
                         </div>
-                        <p class="specialization_text">I use all the latest technologies including React, Next.js, Tailwind and more! <br><br> And I also learn new things everyday.</p>
+                        <p class="specialization_text">I use all the latest technologies including React, Next.js, Tailwind and more! <br><br> I learn new things everyday.</p>
                         <a class="specialization_link" href="/projects#project-eCommerce">See example of work</a>
                     </div>
                     <div class="specialization_block">
