--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@
                 <h2 class="title">My Portfolio</h2>
                 <div class="portfolio_blocks">
                     <div class="portfolio_block" id="project-figmaToHtml">
-                        <p class="portfolio_name">HTML, CSS, Vanilla JS</p>
+                        <p class="portfolio_name portfolio_tech">HTML, CSS, Vanilla JS</p><br>
                         <img src="./images/r-portfolio1.png" alt="Growbe landing project image">
                         <div class="portfolio_details">
                             <p class="portfolio_name">
@@ -42,6 +42,7 @@
                         </div>
                     </div>
                     <div class="portfolio_block" id="project-fixing">
+                        <p class="portfolio_name portfolio_tech">HTML, CSS, Vanilla JS</p><br>
                         <img src="./images/r-portfolio2.png" alt="Philanthropy landing project image">
                         <div class="portfolio_details">
                             <p class="portfolio_name">Fixing Philanthropy Landing page</p>
@@ -49,6 +50,7 @@
                         </div>
                     </div>
                     <div class="portfolio_block" id="project-eCommerce">
+                        <p class="portfolio_name portfolio_tech">HTML, CSS, Vanilla JS</p><br>
                         <img src="./images/r-portfolio3.png" alt="California store project image">
                         <div class="portfolio_details">
                             <p class="portfolio_name">California Small-to-Medium size Shop (under construction)</p>
