few small updates

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                     </div>
                     <div class="home_projects-right">
                         <img class="vector" src="./images/projects-right.png" alt="projects vector">
-                        <a href="/4" class="home_project-right-one home_project">4<img src="./images/project-right-one.jpg" alt="my project"></a>
-                        <a href="/5" class="home_project-right-two home_project">5<img src="./images/project-right-two.jpg" alt="my project"></a>
+                        <a target="_blank" rel="noopener noreferrer nofollow" href="https://dictionarywebapp-kappa.vercel.app/" class="home_project-right-one home_project">Next.js, Tailwind, Context - app<img src="./images/project-right-one.jpg" alt="my project"></a>
+                        <a target="_blank" rel="noopener noreferrer nofollow" href="https://allbirds-landing.vercel.app/" class="home_project-right-two home_project">HTML, CSS, Vanilla JS - landing<img src="./images/project-right-two.jpg" alt="my project"></a>
                         <a href="/6" class="home_project-right-three home_project">6<img src="./images/project-right-three.jpg" alt="my project"></a>
                     </div>
                 </div>
@@ -66,18 +66,11 @@
                         </div>
                     </div>
                     <div class="portfolio_block">
-                        <p class="portfolio_name portfolio_tech">HTML, CSS, Vanilla JS</p><br>
-                        <div class="portfolio_popup">
-                            <div class="portfolio_popup-text">
-                                <span class="portfolio_popup-close popup-close">x</span>
-                                I was fixing HTML, CSS on that Landing Page, <br> Completed within 2 days <br><br> <a class="portfolio_popup-link" href="https://philanthropy-after.vercel.app/" target="_blank" rel="noopener noreferrer nofollow">link to fixed site</a>
-                                <a class="popup-link https://philanthropy-before.vercel.app/">or link to version before</a>
-                            </div>
-                        </div>
+                        <p class="portfolio_name portfolio_tech">Next.js, Tailwind, Context</p><br>
                         <img src="./images/r-portfolio2.png" alt="Philanthropy landing project image">
                         <div class="portfolio_details">
-                            <p class="portfolio_name">Fixing Philanthropy Landing</p>
-                            <button class="portfolio_link portfolio_btn portfolio-btn">View Details</button>
+                            <p class="portfolio_name">Dictionary Web App</p>
+                            <a href="https://dictionarywebapp-kappa.vercel.app/" class="portfolio_link portfolio_btn portfolio-btn portfolio_popup-link" target="_blank" rel="noopener noreferrer nofollow">Open website</a>
                         </div>
                     </div>
                     <div class="portfolio_block">
