--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Andrewdev Website</title>
+        <title>Andrei Sokolovsky - Portfolio</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="css/style.css" rel="stylesheet">
@@ -28,8 +28,8 @@
 
                 <div class="about-me">
                     <div class="about-me_text">
-                        Hello, <p>My name is Andrew.</p>
-                        <span>I am from Poland, and I write code professionally since 2017! I am 21 years old, I want to help people with their website problems, bugs, confusions or with adding some new ideas&edits.</span>
+                        Hello, <p>My name is Andrei.</p>
+                        <span>I write code professionally for 2 years now! I want to help you with website problems, bugs, confusions or with making new ideas a reality :)</span>
                         <div class="button">
                             <a class="btn_green" href="/contact">Contact me</a>
                         </div>
@@ -45,34 +45,35 @@
                     <div class="specialization_block">
                         <div class="specialization_title">
                             <img src="./images/fixing.svg" alt="fixing layouts service">
-                            <p>Fixing problems with layout html, css, javascript</p>
+                            <p>Making real-world Frontend and backend Javascript features</p>
                         </div>
-                        <p class="specialization_text">Helping with css, html</p>
-                        <a class="specialization_link" href="/projects#project-fixing">See example</a>
+                        <p class="specialization_text">I am a Frontend Engineer, but I also work on Backend with Node.js. <br><br> But, most importantly, I love difficult tasks.</p>
+                        <a class="specialization_link" href="https://remindemy-react.vercel.app/" target="_blank" rel="noopener noreferrer nofollow">See example of work</a>;
+                        <a class="specialization_link" href="https://entertainmentwebapp.vercel.app/main" target="_blank" rel="noopener noreferrer nofollow">See another example</a>
                     </div>
                     <div class="specialization_block">
                         <div class="specialization_title">
                             <img src="./images/landing-page.svg" alt="website from scratch service">
-                            <p>Website development. Javascript</p>
+                            <p>Keeping up to date</p>
                         </div>
-                        <p class="specialization_text">Frontend tasks - making webpages, without heavy plugins from scratch with just Javascript</p>
-                        <a class="specialization_link" href="/projects#project-eCommerce">See example</a>
+                        <p class="specialization_text">I use the latest technologies including React, Next.js, Tailwind and more! <br><br> I learn new things everyday.</p>
+                        <a class="specialization_link" href="/projects#project-entertainment">See projects</a>
                     </div>
                     <div class="specialization_block">
                         <div class="specialization_title">
                             <img src="./images/figma-to-html.svg" alt="from figma to html website service">
-                            <p>Converting Figma to Website</p>
+                            <p>Making beautiful-useful pages</p>
                         </div>
-                        <p class="specialization_text">Convertation from Figma to Website html, css (javascript, bootstrap, sass)</p>
-                        <a class="specialization_link" href="/projects#project-fixing">See example</a>
+                        <p class="specialization_text">I have a good eye on ux & ui. <br><br> Besides functional side of projects, I am working with HTML, CSS for more then 1.5 year.</p>
+                        <!-- <a class="specialization_link" href="/projects#project-figmaToHtml">See example of work</a> -->
                     </div>
                     <div class="specialization_block">
                         <div class="specialization_title">
                             <img src="./images/mobile-v.svg" alt="mobile responsive web development service">
                             <p>Responsive-mobile page development</p>
                         </div>
-                        <p class="specialization_text">Working on mobile version with html, css, javascript</p>
-                        <a class="specialization_link" href="/projects#project-figmaToHtml">See example</a>
+                        <p class="specialization_text">You will never get problems with my websites on different screens</p>
+                        <a class="specialization_link" href="https://allbirds-landing.vercel.app/" target="_blank" rel="noopener noreferrer nofollow">See example of work</a>
                     </div>
                 </div>
                 <div class="button">
