--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Andrewdev Website</title>
+        <title>Andrei Sokolovsky - Portfolio</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="css/style.css" rel="stylesheet">
@@ -31,29 +31,43 @@
                 <p class="description">My Work</p>
                 <h2 class="title">My Portfolio</h2>
                 <div class="portfolio_blocks">
+                    <div class="portfolio_block" id="project-remindemy">
+                        <p class="portfolio_name portfolio_tech">Mongo-db Atlas, Express, React, Nodejs, Cloudinary Rest API</p><br>
+                        <a href="https://remindemy-react.vercel.app/" class="portfolio_link portfolio_btn portfolio-btn portfolio_popup-link" target="_blank" rel="noopener noreferrer nofollow"><img src="./images/r-portfolio4.png" alt="Remindemy project image"></a>
+                        <div class="portfolio_details">
+                            <p class="portfolio_name">
+                                * <b>Remindemy</b> - MERN Fullstack project with Cloudinary API. <em>testaccount@gmail.com Testaccount$1</em> <br>
+                            </p>
+                            <a href="https://remindemy-react.vercel.app/" class="portfolio_link portfolio_btn portfolio-btn portfolio_popup-link" target="_blank" rel="noopener noreferrer nofollow">Open website</a>
+                        </div>
+                    </div>
+                    <div class="portfolio_block" id="project-entertainment">
+                        <p class="portfolio_name portfolio_tech">Nextjs 13, React Testing Library, Style Components</p><br>
+                        <a href="https://entertainmentwebapp.vercel.app/main" class="portfolio_link portfolio_btn portfolio-btn portfolio_popup-link" target="_blank" rel="noopener noreferrer nofollow"><img src="./images/r-portfolio3.png" alt="Entertainment project image"></a>
+                        <div class="portfolio_details">
+                            <p class="portfolio_name">
+                                * <b>Entertainment</b> - Latest next.js version <br>
+                            </p>
+                            <a href="https://entertainmentwebapp.vercel.app/main" class="portfolio_link portfolio_btn portfolio-btn portfolio_popup-link" target="_blank" rel="noopener noreferrer nofollow">Open website</a>
+                        </div>
+                    </div>
+                    <div class="portfolio_block">
+                        <p class="portfolio_name portfolio_tech">Next.js 13, Tailwind, Context, RestAPI</p><br>
+                        <a href="https://dictionarywebapp-kappa.vercel.app/" class="portfolio_link portfolio_btn portfolio-btn portfolio_popup-link" target="_blank" rel="noopener noreferrer nofollow"><img src="./images/r-portfolio2.png" alt="Dictionary project image"></a>
+                        <div class="portfolio_details">
+                            <p class="portfolio_name">
+                                * <b>Dictionary Web App</b> - Working with RestAPI and ContextAPI <br>
+                            </p>
+                            <a href="https://dictionarywebapp-kappa.vercel.app/" class="portfolio_link portfolio_btn portfolio-btn portfolio_popup-link" target="_blank" rel="noopener noreferrer nofollow">Open website</a>
+                        </div>
+                    </div>
                     <div class="portfolio_block" id="project-figmaToHtml">
                         <p class="portfolio_name portfolio_tech">HTML, CSS, Vanilla JS</p><br>
-                        <img src="./images/r-portfolio1.png" alt="Growbe landing project image">
+                        <a href="https://allbirds-landing.vercel.app/" class="portfolio_link portfolio_btn portfolio-btn portfolio_popup-link" target="_blank" rel="noopener noreferrer nofollow"><img src="./images/r-portfolio1.png" alt="Allbirds landing project image"></a>
                         <div class="portfolio_details">
                             <p class="portfolio_name">
                                 * <b>Allbirds</b> - I can make professional sites for businesses. <br>
                             </p>
-                            <a href="https://allbirds-landing.vercel.app/" class="portfolio_link portfolio_btn portfolio-btn portfolio_popup-link" target="_blank" rel="noopener noreferrer nofollow">Open website</a>
-                        </div>
-                    </div>
-                    <div class="portfolio_block" id="project-fixing">
-                        <p class="portfolio_name portfolio_tech">HTML, CSS, Vanilla JS</p><br>
-                        <img src="./images/r-portfolio2.png" alt="Philanthropy landing project image">
-                        <div class="portfolio_details">
-                            <p class="portfolio_name">Fixing Philanthropy Landing page</p>
-                            <a href="https://allbirds-landing.vercel.app/" class="portfolio_link portfolio_btn portfolio-btn portfolio_popup-link" target="_blank" rel="noopener noreferrer nofollow">Open website</a>
-                        </div>
-                    </div>
-                    <div class="portfolio_block" id="project-eCommerce">
-                        <p class="portfolio_name portfolio_tech">HTML, CSS, Vanilla JS</p><br>
-                        <img src="./images/r-portfolio3.png" alt="California store project image">
-                        <div class="portfolio_details">
-                            <p class="portfolio_name">California Small-to-Medium size Shop (under construction)</p>
                             <a href="https://allbirds-landing.vercel.app/" class="portfolio_link portfolio_btn portfolio-btn portfolio_popup-link" target="_blank" rel="noopener noreferrer nofollow">Open website</a>
                         </div>
                     </div>
