edit email sender

--- a/contact.html
+++ b/contact.html
@@ -33,8 +33,9 @@
         <div class="contacts">
             <div class="contacts_email">
                 <div class="contacts_title">Leave email, and I will contact you within an hour.</div>
-                <form action="/contact" method="post" id="form">
+                <form action="https://formspree.io/f/xjvdndjz" method="post" id="form">
                     <input id="email" type="email" name="email" placeholder="Enter your email">
+                    
                     <button type="submit">
                         >
                     </button>
