--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <div class="home_projects-left">
                         <img class="vector" src="./images/projects-left.png" alt="projects vector">
                         <a href="https://remindemy-react.vercel.app/" target="_blank" rel="noopener noreferrer nofollow" class="home_project-left-one home_project">Fullstack - MERN App, Cloudinary API<img src="./images/project-left-one.jpg" alt="my project"></a>
-                        <a href="https://entertainmentwebapp.vercel.app/main" target="_blank" rel="noopener noreferrer nofollow" class="home_project-left-two home_project">Nextjs 13, React Testing Library, Style Components<img src="./images/project-left-two.jpg" alt="my project"></a>
+                        <a href="https://entertainmentwebapp.vercel.app/main" target="_blank" rel="noopener noreferrer nofollow" class="home_project-left-two home_project">Next.js 13 <!-- , React Testing Library  --><img src="./images/project-left-two.jpg" alt="my project"></a> 
                         <a href="/3" class="home_project-left-three home_project">(In development:)<img src="./images/project-left-three.jpg" alt="my project"></a>
                     </div>
                     <div class="home_text">
