--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         </div>
                     </div>
                     <div class="portfolio_block" id="project-entertainment">
-                        <p class="portfolio_name portfolio_tech">Nextjs 13, React Testing Library, Style Components</p><br>
+                        <p class="portfolio_name portfolio_tech">Nextjs 13 <!-- , React Testing Library  --></p><br>
                         <a href="https://entertainmentwebapp.vercel.app/main" class="portfolio_link portfolio_btn portfolio-btn portfolio_popup-link" target="_blank" rel="noopener noreferrer nofollow"><img src="./images/r-portfolio3.png" alt="Entertainment project image"></a>
                         <div class="portfolio_details">
                             <p class="portfolio_name">
