change titles and descr for basic seo

--- a/about.html
+++ b/about.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Andrei Sokolovsky - Portfolio</title>
+        <title>Web developer with 2 years experience</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="css/style.css" rel="stylesheet">
-        <meta name="description" content="Hire html and css Frontend web developer portfolio">
+        <meta name="description" content="Web developer with 2 years experience working with React, Next.js, Tailwind, Node.js and many more">
         <link rel="icon" type="image/x-icon" href="./images/portfolio.ico">
     </head>
     <body>
@@ -13,7 +13,7 @@
             <header>
                 <img class="nav_decore" src="./images/nav_decore.png" alt="header decoration">
                 <nav class="nav">
-                    <p class="nav_logo"><a href="/">Andrei</a></p>
+                    <p class="nav_logo"><a href="/">Andrey</a></p>
                     <img class="nav_hamb" src="./images/menu.svg" alt="open menu">
                     <ul class="nav_menu">
                         <li class="nav_close">x</li>
@@ -28,7 +28,7 @@
 
                 <div class="about-me">
                     <div class="about-me_text">
-                        Hello, <p>My name is Andrei.</p>
+                        Hello, <p>My name is Andrey.</p>
                         <span>I write code professionally for 2 years now! I want to help you with website problems, bugs, confusions or with making new ideas a reality :)</span>
                         <div class="button">
                             <a class="btn_green" href="/contact">Contact me</a>
