--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Andrei Sokolovsky - Portfolio</title>
+        <title>Professional Web Developer portfolio</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="css/style.css" rel="stylesheet">
@@ -13,7 +13,7 @@
             <header>
                 <img class="nav_decore" src="./images/nav_decore.png" alt="header decoration">
                 <nav class="nav">
-                    <p class="nav_logo"><a href="/">Andrei</a></p>
+                    <p class="nav_logo"><a href="/">Andrey</a></p>
                     <img class="nav_hamb" src="./images/menu.svg" alt="open menu">
                     <ul class="nav_menu">
                         <li class="nav_close">x</li>
@@ -34,7 +34,7 @@
                         <a href="/3" class="home_project-left-three home_project">(In development:)<img src="./images/project-left-three.jpg" alt="my project"></a>
                     </div>
                     <div class="home_text">
-                        <h1 class="home_title">Hi, I am Andrei <br> <em>How are you?</em></h1>
+                        <h1 class="home_title">Hi, I am Andrey <br> <em>How are you?</em></h1>
                         <!-- <p class="home_descr">* Click this button to contact with me!</p> -->
                         <div class="home_buttons">
                             <a class="btn_green" href="/contact.html">Work with me</a>
