--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
                             <a class="btn_green" href="/contact">Contact me</a>
                         </div>
                     </div>
-                    <img src="./images/profile.jpg" alt="my picture">
+                    <img width="320" src="./images/profile.jpg" alt="my picture">
                 </div>
             </header>
 
